--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="Nome do jogador"
+        android:text="David"
         android:ems="10"
         android:id="@+id/player"
         android:layout_centerVertical="true"
@@ -55,5 +55,24 @@
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/conecta"
         android:layout_alignEnd="@+id/conecta" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancela"
+        android:id="@+id/btnCancela"
+        android:enabled="false"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Result"
+        android:id="@+id/button5"
+        android:layout_alignBottom="@+id/btnCancela"
+        android:layout_toRightOf="@+id/btnCancela"
+        android:layout_toEndOf="@+id/btnCancela" />
 
 </RelativeLayout>
