--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -1,19 +1,39 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="30dp"  android:paddingRight="30dp"
-    android:id="@+id/grid"
+    android:id="@+id/relative"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    android:columnCount="2"
+    android:columnCount="3"
     android:rowCount="4"
 
 
     tools:context="quiz.com.david.quiz.QuestionsActivity">
 
+    <TextView
+        android:id="@+id/jogo_final"
+        android:layout_marginTop="15dp"
+        android:textSize="40dp"
+        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:visibility="invisible"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:text="Fechar jogo"
+        android:id="@+id/close_app"
+        android:visibility="invisible"
+         />
 
-
+    <GridLayout
+        android:id="@+id/grid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+    >
 
     <ImageButton
         android:layout_marginTop="15dp"
@@ -33,11 +53,12 @@
         android:src="@drawable/question"
         android:id="@+id/b2"
         android:layout_row="0"
-        android:layout_column="1"
+        android:layout_column="2"
         android:background="@drawable/escolhe_round"
         android:layout_gravity="right"
         android:layout_marginBottom="20dp"
         />
+
     <ImageButton
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -54,7 +75,7 @@
         android:id="@+id/b4"
         android:src="@drawable/question"
         android:layout_row="1"
-        android:layout_column="1"
+        android:layout_column="2"
         android:background="@drawable/escolhe_round"
         android:layout_gravity="right"
         android:layout_marginBottom="20dp"
@@ -75,7 +96,7 @@
         android:id="@+id/b6"
         android:src="@drawable/question"
         android:layout_row="2"
-        android:layout_column="1"
+        android:layout_column="2"
         android:background="@drawable/escolhe_round"
         android:layout_gravity="right"
         android:layout_marginBottom="20dp"
@@ -97,12 +118,13 @@
         android:id="@+id/b8"
         android:src="@drawable/question"
         android:layout_row="3"
-        android:layout_column="1"
+        android:layout_column="2"
         android:background="@drawable/escolhe_round"
         android:layout_gravity="right"
         android:layout_marginBottom="20dp"
         />
-
-
-
 </GridLayout>
+
+
+</RelativeLayout>
+
